# Upload-Repository

./: README.md  UI组件库.md  main.py  pyproject.toml  requirements.txt  项目架构.md  项目架构_新 - 副本.md
git_sync_tool.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/: __init__.py  main.py
src/cli/: main.py
src/core/: __init__.py  changelog_gen.py  git_engine.py
src/data/: __init__.py  config_manager.py  database.py
src/models/: repository.py
src/services/: __init__.py  git_service.py  log_service.py  repo_service.py  schedule_service.py
src/ui/: __init__.py  main_window.py
src/ui/dialogs/: add_repo_dialog.py
src/utils/: exceptions.py  logger.py  theme_manager.py
tests/: test_core.py  test_log.py
